# infor-cloudsuite-mcp

./: .env.example
infor-cloudsuite-mcp/: .env.example  .gitignore  README.md  pyproject.toml
infor-cloudsuite-mcp/src/infor_mcp/: auth.py  server.py
infor-cloudsuite-mcp/src/infor_mcp/tools/: analysis.py  query.py
src/infor_mcp/: client.py
src/infor_mcp/prompts/: workflows.py
src/infor_mcp/resources/: reference.py
src/infor_mcp/tools/: analysis.py
