[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infor-cloudsuite-mcp"
version = "0.1.0"
description = "MCP Server for Infor CloudSuite - AI-powered ERP orchestration layer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cole" }]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
infor-mcp = "infor_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/infor_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
